<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BYRClient</string>
    <string name="app_title">北邮人论坛</string>

    <!-- 异常 -->
    <string name="warning_empty_username">用户名不能为空</string>
    <string name="warning_empty_password">密码不能为空</string>
    <string name="error_network">连接错误，请检查您的网络</string>
    <string name="fail_get_content">获取内容失败，请稍后再试</string>
    <string name="fail_get_pagination">获取分页内容失败</string>
    <!-- 提醒 -->
    <string name="notification_loading">努力加载中...</string>
    <string name="notification_last_page">已经是最后一页了</string>
    <string name="notification_empty_page">输入页码为空</string>
    <string name="notification_page_out_range">已超过最大页数</string>
    <string name="notification_page_below_zero">输入页数必须大于0</string>

    <!-- 登录 -->
    <string name="login_user_name">用户名</string>
    <string name="login_user_password">密  码</string>
    <string name="login_login">登录</string>
    <string name="login_clear">清除</string>
    <string name="login_register">注册</string>

    <!-- 主页 -->
    <string name="main_byr">BYR</string>
    <string name="main_topten">十大</string>
    <string name="main_focus">关注</string>
    <string name="main_recommended">推荐</string>
    <string name="main_favoruite">收藏</string>
    <string name="main_sections">分区</string>
    <string name="main_user">用户</string>
    <string name="main_mailbox">信箱</string>
    <string name="main_sure_exit">真的要离开我么T.T</string>
    <string name="main_ok">确定</string>
    <string name="main_cancel">取消</string>

    <!-- 关于 -->
    <string name="about_todear">想听光哥唱歌了o(╯□╰)o\n想去网城直包了~\\(≧▽≦)/~\n\n意见建议:@MrRight (bbs)</string>

    <!-- 分区 -->
    <string name="sections_bbs_staff">本站\n站务</string>
    <string name="sections_campus">北邮\n校园</string>
    <string name="sections_tech">学术科技</string>
    <string name="sections_information">信息社会</string>
    <string name="sections_art">人文\n艺术</string>
    <string name="sections_life">生活时尚</string>
    <string name="sections_entertainment">休闲娱乐</string>
    <string name="sections_sports">体育\n健身</string>
    <string name="sections_game">游戏\n对战</string>
    <string name="sections_court">投诉</string>
    <string name="sections_cn_bbs">转信</string>
    <string name="sections_bbslog">论坛数据统计及日志</string>
    <string name="sections_bm_affair">版主事务区</string>
    <string name="sections_board">版面事务区</string>
    <string name="sections_byr_team">北邮人团队</string>
    <string name="sections_school">院系校区</string>
    <string name="sections_association">社团组织</string>
    <string name="sections_advertise">广告乐园</string>
    <string name="sections_china">家乡</string>
    <string name="sections_onlinegames">网络游戏</string>

    <!-- 回帖列表 -->
    <string name="subject_item_lz">楼主</string>
    <string name="subject_item_first">沙发</string>
    <string name="subject_item_floor">%d楼</string>
    <string name="subject_item_info">用户：%1$s (%2$s)\n发表时间：%3$s</string>
    <string name="subject_item_attachment"><u>附件列表</u></string>

    <!-- 列表工具条 -->
    <string name="list_function_bar_home">主页</string>
    <string name="list_function_bar_refresh">刷新</string>
    <string name="list_function_bar_goto">GO</string>
    <string name="list_function_bar_next_page">下一页</string>
    <string name="list_function_bar_thread">回复</string>

</resources>