<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:weightSum="5" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2" >

            <TextView
                android:id="@+id/main_topten"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/main_topten"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/main_hot"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/main_focus"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_sections"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:background="@drawable/blue_bg"
            android:gravity="center"
            android:text="@string/main_sections"
            android:textColor="@color/white"
            android:textSize="40sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/main_recommended"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="3dp"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/main_recommended"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_byr"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:background="@drawable/blue_bg"
            android:gravity="center"
            android:text="@string/main_byr"
            android:textColor="@color/white"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="3" >

        <TextView
            android:id="@+id/main_favourite"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:background="@drawable/blue_bg"
            android:gravity="center"
            android:text="@string/main_favoruite"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2" >

            <TextView
                android:id="@+id/main_user"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/main_user"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/main_mailbox"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/main_mailbox"
                android:textColor="@color/white"
                android:textSize="28sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>